2005-04-17  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: change audio/x-m4a mime-type to audio/mp4,
	add audio/x-m4a as an alias, add video/mp4 detection
	(from: http://www.ietf.org/internet-drafts/draft-lim-mpeg4-mime-03.txt)

2005-04-16  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: add application/x-gedcom as a mime-type
	for GEDCOM family history files

2005-04-16  Christophe Fergeau  <teuf@gnome.org>

	* freedesktop.org.xml:
	* freedesktop.org.xml.in: improved mathematica magic, fixes #2660

2005-04-16  Christophe Fergeau  <teuf@gnome.org>

	* freedesktop.org.xml.in: added magic for mathematica notebooks
	* freedesktop.org.xml:
	* po/Makefile.in.in: updated autogenerated files

2005-04-16  Christophe Fergeau  <teuf@gnome.org>

	* .cvsignore:
	* freedesktop.org.xml.in: use application/xslt+xml for xslt
	stylesheets, maybe it will need to be changed to text/xml or
	application/xml, I'm unsure about what's best, this is bug #2928

2005-04-16  Christophe Fergeau  <teuf@gnome.org>

	* .cvsignore: minor update, fixes #2091, patch by Loic Minier

2005-04-16  Christophe Fergeau  <teuf@gnome.org>

	* freedesktop.org.xml.in: added magic pattern and glob pattern for
	ruby files, patch by Ilmari Heikkinen, fixes #2154

2005-04-16  Christophe Fergeau  <teuf@gnome.org>

	* freedesktop.org.xml.in: added mime type for 7-zip

2005-04-16  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml: sync with freedesktop.org.xml.in content
	* freedesktop.org.xml.in: add ".RMF" as a  magic for RealMedia
	files, also add the rmvb suffix for "Real Media Variable Bitrate" files

2005-04-16  Christophe Fergeau  <teuf@gnome.org>

	* freedesktop.org.xml.in: added application/vnd.ms-access, patch from
	Ed Catmur, fixes bug #2619

2005-04-16  Christophe Fergeau  <teuf@gnome.org>

	* freedesktop.org.xml.in: added more extensions for fortran programs,
	patch by John Spray, fixes #2623

2005-04-16  Christophe Fergeau  <teuf@gnome.org>
