@@ -1395,6 +1395,13 @@ command to generate the output files.
     </magic>
     <glob pattern="*.swf"/>
   </mime-type>
+  <mime-type type="application/x-shorten">
+    <_comment>Shorten audio</_comment>
+    <magic priority="50">
+      <match type="string" value="ajkg" offset="0"/>
+    </magic>
+    <glob pattern="*.shn"/>
+  </mime-type>
   <mime-type type="application/x-siag">
     <_comment>Siag spreadsheet</_comment>
     <glob pattern="*.siag"/>
