@@ -1,3 +1,8 @@
+2005-05-30  Bastien Nocera  <hadess@hadess.net>
+
+	* freedesktop.org.xml.in: add the "application/x-shorten" mime-type
+	to represent Shorten lossless audio files
+
 2005-04-17  Bastien Nocera  <hadess@hadess.net>
 
 	* freedesktop.org.xml.in: change audio/x-m4a mime-type to audio/mp4,
